@@ -20,6 +20,7 @@
 	(PokerRendererTests.test18_scheduleLookCardsNoGameRunning): Wrote
 	method.
 	(PokerRendererTests.test19_clickSitOutCoverage): Wrote method.
+	(PokerRendererTests.test20_handleMenuUnknownName): Wrote method.
 
 	* pokerui/pokerrenderer.py (PokerRenderer._handleConnection):
 	error message for bad outfit should print outfits, not urls.
